# obits

./: .gitignore  __init__.py  debug_page_source.html  example_page_data.json  example_page_data_2.json  extract_data.ipynb  obit_text_sample.csv  pull_single_page.py  pyproject.toml  random_sample.py  random_sample_sb.py  readme.txt  requirements.txt
notebooks/: plot_4s.ipynb  testing.ipynb  top_20_occupations.tex  topic_modeling.ipynb
obittools/: __init__.py  extract_data.py  misc_utils.py
src/: load_obit_from_url.py
src/analysis/: bert_embeddings.py  llm_labeler.py  ngram_lm.py
src/kevin-scraping/: random_sample.py  sitemap_scrape.py  sitemap_url_extraction.py
src/processing/: extract_entities.py  extract_obit_variables_with_llm.py  log_odds.py  topic_modeling.py
src/scraping/: pull_single_page.py  scrape_city_urls.py  scrape_obits_from_cities.py  scrape_obits_from_kevin_xml.py  test.py
src/scripts/: create_annotation_sample.py
